--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Binaries
 **/bin/
 bin-int/
+**/Makefile
 
 # Hazel files
 *.log
@@ -11,6 +12,7 @@ bin-int/
 **.vcxproj
 **.vcxproj.filters
 **.vcxproj.user
+.vscode
 
 # Directories
 Hazel/vendor/VulkanSDK
